# uestc_Internet_plus_course_project

./: .gitignore  README.md
CPU/: ALU.v  (+48 more)
parallel_programming/: CMakeLists.txt  MPItest.cpp  README.md  base.cpp  cache.test.cpp  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  test.cpp  分布式并行计算-MPI实验报告.docx  深度学习基础——计算机视觉证书.docx
parallel_programming/MPI/: CMakeLists.txt  README.md  base.cpp  cache.test.cpp  main.cpp  main1.cpp  main2.cpp  main3.cpp
parallel_programming/MPI/execForWindows/: integrate1.csv
parallel_programming/MPI/output/: record.cache.8.txt  record.cancel_Bcast.19.txt  record.cancel_Bcast.2.txt  record.cancel_Bcast.6.txt  (+9 more)
parallel_programming/execForWindows/: integrate.csv  integrate.py  integrate2.csv  integrate3.csv  run.sh
parallel_programming/n-body/: cuda.docx  n-body.cpp  n-body1.cpp  n-body10.cpp  n-body11.cpp  n-body12.cpp  n-body13.cpp  n-body14.cpp  n-body2.cpp  n-body3.cpp  n-body4.cpp  n-body5.cpp  n-body6.cpp  n-body7.cpp  n-body8.cpp  n-body9.cpp
parallel_programming/output/: record.cache.8.txt  record.cancel_Bcast.1.txt  record.cancel_Bcast.16.txt  record.cancel_Bcast.18.txt  record.cancel_Bcast.3.txt  record.cancel_Bcast.38.txt  record.cancel_Bcast.39.txt  record.cancel_Bcast.4.txt  record.cancel_Bcast.5.txt  record.cancel_Bcast.7.txt  record.cancel_Bcast.8.txt  record.init.1.txt  record.init.2.txt  record.init.3.txt  record.init.4.txt  record.init.5.txt  record.init.6.txt  record.init.7.txt  record.init.8.txt  record.remove_even.2.txt  record.remove_even.6.txt
parallel_programming/srcForWindows/: main.cpp  main2.cpp
(+417 files in other folders)
